java 8 avec script pour xampp